# lucy-assistant

./: .gitignore  .gitigore  README.md  cortex.py  flake.nix  pyproject.toml  tts.py
depricated/: code_tools.py  interface_ollama.py  interface_openai.py  main.py
src/: audio-example.py  cortex.py  fabric.py  stt-whisper.py  stt.py  tts-melotts.py  tts.py
src/cal/: agent_calendar.py  manager_calendar.py  tools_calendar.py
src/echo/: agent_echo.py  tools_duck.py  tools_wikipedia.py
src/marvin/: agent_marvin.py  manager_system.py  tools_automation.py
src/mcp/: __init__.py  mcp_client.py
src/orion/: agent_orion.py  manager_calendar.py  tools_calendar.py
src/tools/: code_tools.py  manager_workspace.py
