[project]
name = "lucy-assistant"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "melotts",
    "unidic==1.1.0", # the dictionary for mecab (used in MeloTTS)
    
    "openai-whisper==20240930",
    "pyaudio==0.2.14",
    "SpeechRecognition==3.11.0",
    
    "openai==1.57.0",
    "langchain==0.3.10",
    "langgraph==0.2.56",
    "langchain-openai==0.2.11",
    "langchain_community==0.3.10",

    "sounddevice==0.5.1",
    "scipy==1.14.1",



    # for orion agent
    "google-api-python-client==2.160.0",
    #"google-auth-httplib2",
    #"google-auth-oauthlib==1.2.1"
    #"google-auth", 

    # for echo agent
    "wikipedia==1.4.0",
    "duckduckgo-search==7.3.0",
]

[tool.uv.sources]
#melotts = { git = "https://github.com/myshell-ai/MeloTTS.git", rev = "36175becca0319beec705122673d8d1c4941d498" }
melotts = { path = "./depend/MeloTTS" }
